--- a/magento.yaml
+++ b/magento.yaml
@@ -1,3 +1,17 @@
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: magento2
+#   labels:
+#     app: magento2
+# spec:
+#   ports:
+#     - port: 80
+#   selector:
+#     app: magento2
+#     tier: frontend
+#   type: NodePort #any service of type NodePort can be accessed over that IP address
+# ---
 apiVersion: v1
 kind: Service
 metadata:
@@ -5,12 +19,14 @@ metadata:
   labels:
     app: magento2
 spec:
-  ports:
-    - port: 80
+  type: LoadBalancer
   selector:
     app: magento2
     tier: frontend
-  type: NodePort #any service of type NodePort can be accessed over that IP address
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 80  
 ---
 #This it to deploy magento2 container to Kubernetes
 apiVersion: extensions/v1beta1
@@ -33,7 +49,7 @@ spec:
         tier: frontend
     spec:
       containers:
-      - image: alexcheng/magento2  #https://hub.docker.com/r/alexcheng/magento2/
+      - image: asia.gcr.io/hermitcrab-217412/magento2
         name: magento2
         env:
         - name: MAGENTO_DB_HOST
